@@ -2,8 +2,10 @@
 local stock_me_up_main_hotkey = {
     type = "custom-input",
     name = "stock-me-up-main-hotkey",
+    localised_name = {"Stock-Me-Up-Hotkeys.stock-me-up-main-hotkey"},
+    localised_description = {"Stock-Me-Up-Hotkeys.stock-me-up-main-hotkey-description"},
     order = "StockMeUp01",
-    key_sequence = "CONTROL + S",
+    key_sequence = "ALT + S",
     action = "lua"
 }
 ---@cast stock_me_up_main_hotkey data.CustomInputPrototype
@@ -13,7 +15,7 @@ local stock_me_up_full_hotkey = {
     type = "custom-input",
     name = "stock-me-up-full-hotkey",
     order = "StockMeUp02",
-    key_sequence = "CONTROL + SHIFT + S",
+    key_sequence = "ALT + SHIFT + S",
     action = "lua"
 }
 ---@cast stock_me_up_full_hotkey data.CustomInputPrototype
