@@ -4,3 +4,7 @@ request-full-stock=Requested to be fully stocked.
 no-request-exists=No logistic request exists for __1__; a stock request was not created.
 requested-overstock=Requested overstock of __1__; stock request will not be manually removed.
 requested-stock=Requested stock of __1__.
+
+[Stock-Me-Up-Hotkeys]
+stock-me-up-main-hotkey=Request stock up
+Stock-Me-Up-Hotkeys.stock-me-up-main-hotkey-description=Requests stock of a held item (or all items if nothing is held).
